--- a/assets/img/style.css
+++ b/assets/img/style.css
@@ -3,3 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.header-Conterner{
+    padding: 40px;
+    
+}
+
+h1{ 
+    text-align: center;
+
+}
+
